--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href={% static 'images/logo_spdx.jpg' %}>
+    <link rel="icon" href={% static 'images/wallet.jpg' %}>
 
     <title >Wallet {% block title %}{% endblock %}</title>
 
@@ -80,9 +80,6 @@ li.ui-menu-item {
 .h4{
   color:#337ab7;; !important;
 }
-#searchic {
-    background-image: url({% static 'images/searchicon.png' %});
-}
 </style>
     </head>
   <body>
@@ -125,7 +122,6 @@ li.ui-menu-item {
      
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/Chart.bundle.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui.js' %}"></script>
         <!--<script>
         $(document).ready(function () {
